# aircv

./: .gitignore  .travis.yml  LICENSE  MANIFEST  README.md  aircv.html  aircv.py  blueprint.ipynb  example.py  runtest.py  setup.cfg  setup.py  testorb.py  testsift.py
aircv/: __init__.py
docs/: DEVELOPMENT.md  OVERVIEW.md  cv2-help.txt
tests/: example.py  runtest.sh
