[metadata]
name = aircv
author = codeskyblue
author-email = codeskyblue@gmail.com
summary = Find object position based on python-opencv2.
license = MIT
home-page = https://github.com/netease/aircv
requires-python = >=2.7
classifier = 
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python

[files]
packages =
	aircv
